--- a/androidApp/src/main/res/xml/lyrics_line_horizontal_widget_provider.xml
+++ b/androidApp/src/main/res/xml/lyrics_line_horizontal_widget_provider.xml
@@ -1,4 +1,5 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/glance_default_loading_layout"
-    android:configure="com.toasterofbread.spmp.widget.WidgetConfigurationActivity">
+    android:configure="com.toasterofbread.spmp.widget.WidgetConfigurationActivity"
+    android:widgetFeatures="reconfigurable|configuration_optional">
 </appwidget-provider>
