--- a/androidApp/src/main/res/xml/lyrics_line_horizontal_widget_provider.xml
+++ b/androidApp/src/main/res/xml/lyrics_line_horizontal_widget_provider.xml
@@ -1,5 +1,12 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/glance_default_loading_layout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:configure="com.toasterofbread.spmp.widget.WidgetConfigurationActivity"
-    android:widgetFeatures="reconfigurable|configuration_optional">
+    android:description="@string/widget_description_lyrics_line_horizontal_widget"
+    android:previewImage="@drawable/widget_preview_lyrics_line_horizontal"
+    android:initialLayout="@layout/glance_default_loading_layout"
+    android:widgetFeatures="reconfigurable|configuration_optional"
+    android:targetCellHeight="1"
+    android:targetCellWidth="4"
+    android:widgetCategory="home_screen|keyguard|searchbox"
+    tools:ignore="UnusedAttribute">
 </appwidget-provider>
