--- a/androidApp/src/main/res/xml/song_queue_widget_provider.xml
+++ b/androidApp/src/main/res/xml/song_queue_widget_provider.xml
@@ -7,6 +7,7 @@
     android:widgetFeatures="reconfigurable|configuration_optional"
     android:targetCellHeight="1"
     android:targetCellWidth="4"
+    android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen|keyguard|searchbox"
     tools:ignore="UnusedAttribute">
 </appwidget-provider>
